test/files/neg/t6528.check
t6528.scala:8: error: No implicit view available from CoSet[U,U] => String.
  implicitly[CoSet[U, U] => String]
            ^
one error found
